r224 (04. 03. 2024):
Added options "Persistent Berserker", "Show Captain Spawn Chance" and "Damage Absorption"
Buffs: Added count of how many cooldowns are currently running in Hacker PECM

r223 (03. 03. 2024):
Loot Counter: Possible fix to crashing after spawn

r222 (02. 03. 2024):
Shadow Raid: Adjusted count of possible loot bags

r221 (25. 02. 2024):
Assault Delay Tracker: Fixed an issue on Assault start
Achievement Loot Counter: Fixed an issue where the tracker won't destroy after all loot is secured
Daily Side Jobs: Fixed 0 progress in the tracker

r220 (23. 02. 2024):
Attempt to fix stuck trackers after sync
Loot Counter: Fixed an issue where the tracker won't destroy after all loot is secured
Undercover: Fixed a visual failed on achievement "Blow-Out" even the game granted it after completion
Slaughterhouse: Fixed an issue where "SNIPERS!" popup have incorrect color

r219 (12. 02. 2024):
Memory optimization by reducing the amount of alarm callbacks
Civilian Count Tracker: Fixed a crash in VR
Enemy Counter Tracker: Fixed incorrect format after alarm when "Show enemies with pager (stealth)" option is enabled
Cook Off: Fixed an issue where Heli timer is not visible on Hard difficulty
Scarface Mansion: Fixed missing tracker description for achievement "Settling a Scar"

r218 (27. 01. 2024):
Loot Counter: The tracker in endless heists will show the maximum amount of bags for max level or infamy pool if possible
Mission Briefing: Fixed an issue where the maximum of bags for max level is off

r217 (22. 01. 2024):
Further improved compatibility with custom heists

r216 (16. 01. 2024):
Prison Nightmare: Fixed a load crash

r215 (15. 01. 2024):
Added option "Show Endless Assault in the Tracker"
Further improved compatibility with custom heists
Color Codes tracker: Fixed an issue where code "0" is formatted as "?"
Mountain Master Heist: Fixed an issue where teaset is not counted correctly
Shadow Raid: Fixed incorrect min XP

r214 (08. 01. 2024):